2006-08-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac (tool-wrappers): Check for ltdl support when tool
	wrapper binaries are enabled.
	* tools/Makefile.am (LIBJVM): Remove variable.
	(AM_CPPFLAGS): Add LIBJVM define.
	(gappletviewer_LDFLAGS, gjarsigner_LDFLAGS, gkeytool_LDFLAGS,
	gjar_LDFLAGS, gnative2ascii_LDFLAGS, gserialver_LDFLAGS,
	gjavah_LDFLAGS): Remove variables.
	* tools/toolwrapper.c (main): Use dlopen to load libjvm library.

2006-08-18  Tom Tromey  <tromey@redhat.com>

	* gnu/java/util/prefs/NodeWriter.java (writeParents): Removed
	debugging prints.
	* gnu/java/util/prefs/NodeReader.java (readNodes): Removed debugging
	print.
	(readEntries): Likewise.

2006-08-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTabbedPaneUI.java
	(layoutLabel): Reset the text and icon rectangles.

2006-08-17  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR classpath/28537
	* native/plugin/Makefile.am (libgcjwebplugin_la_CXXFLAGS):
	Transform gappletviewer name using program_transform_name.

2006-08-17  Jeroen Frijters  <jeroen@frijters.net>

	* javax/swing/filechooser/FileSystemView.java
	(getFileSystemView): Always return UnixFileSystemView, since
	that's the only one we got. Marked with NotImplementedException.
	* javax/swing/plaf/basic/BasicFileChooserUI.java
	(mouseClicked, installUI): Don't parse path by hand.

2006-08-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(scrollRectToVisible): Handle intermediate non-JComponents
	more gracefully.

2006-08-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(blitBuffer): Removed. This is now done in commitBuffer().
	(commitBuffer): Always paint on the root window or applet.
	No need to look for intermediate heavyweights. Optimized
	rectangle translation.
	(commitRemainingBuffers): Removed. Not needed anymore.
	(getHeavyweightParent): Removed. Not needed anymore.
	(getOffscreenBuffer): Fetch offscreen image from the
	actual root component.